add peer identification on openbsd

BUG: 255697
FIXED-IN: 4.6.2